<resources>
    <string name="app_name">Kotlin-Notes</string>
    <string name="view">View</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="notes">Type a note...</string>
    <string name="savenote">Save Note</string>
    <string name="updatenote">Update Note</string>
    <string name="deletenote">Delete Note</string>
    <string name="searchnote">Search Note</string>
</resources>
