<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto">
   <LinearLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
   android:orientation="vertical">
    <android.support.v7.widget.CardView android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        app:cardCornerRadius="1dp"
    android:layout_marginLeft="11dp"
    android:layout_marginRight="11dp"
    android:layout_marginTop="10dp">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
    android:orientation="vertical">

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/title"
                  android:background="@color/transparent"
                  android:layout_margin="5dp"
                  android:id="@+id/et_Title"
        />
        <View
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"

        android:id="@+id/et_Notes"
        android:background="@color/transparent"
        android:hint="@string/notes"
        android:layout_marginTop="5dp"
                  android:layout_marginLeft="5dp"
                  android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"/>


    </LinearLayout>
    </android.support.v7.widget.CardView>

     <Button android:layout_width="match_parent" android:layout_height="wrap_content"
             android:id="@+id/btn_Save"
     android:background="@color/colorPrimary"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:text="@string/savenote"
             android:textColor="@color/white"
             android:textStyle="bold"
     android:layout_marginTop="35dp"/>
   </LinearLayout>
</ScrollView>